js/src/tests/test262/built-ins/Error/prototype/S15.11.4_A4.js
assert
.
throws
(
TypeError
(
)
=
>
{
new
Error
.
prototype
(
)
;
throw
new
Test262Error
(
)
;
}
)
;
reportCompare
(
0
0
)
;
